#1ck5xeg - fix overlapping texts of collection title in mobile

--- a/styles/home/index.scss
+++ b/styles/home/index.scss
@@ -32,3 +32,15 @@
   content: "";
   display: table;
 } 
+
+.large--hide .de-u-textBold.de-u-textCapitalize {
+  max-width: 250px;
+
+  @media screen and (max-width: 480px) {
+    max-width: 170px;
+  }
+
+  @media screen and (max-width: 360px) {
+    max-width: 100px;
+  }
+}
